@startuml SearchChatHistory_ClassDiagram

' Styling & Settings
skinparam style strictuml
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor #1A73E8
    ArrowColor #5F6368
}

!define ABSTRACT_COLOR #FFE6CC
!define SERVICE_COLOR #CCE5FF
!define DTO_COLOR #E6CCFF
!define ENTITY_COLOR #CCFFE6
!define REPOSITORY_COLOR #FFFFCC
!define CONTROLLER_COLOR #FFE6E6
!define DbContext #E6F3FF

skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #F9F9F9
skinparam classBorderColor #333333
skinparam arrowColor #333333

' ==================== FRONTEND ====================

class "ChatController" as FrontendController <<frontend controller>> #FFE6E6 {
    + Search(q: string) : Task<IActionResult>
}

' ==================== BACKEND - CONTROLLER ====================

class "ChatController" as BackendController <<backend controller>> #FFE6E6 {
    - _chatService : IChatService
    + SearchChats(q: string) : Task<IActionResult>
}

' ==================== BACKEND - DTOs ====================

class ChatListDto #E6CCFF {
    + ChatId : int
    + ChatName : string?
    + ChatType : string
    + LastMessage : string?
    + LastMessageAt : DateTime?
    + PartnerName : string?
    + PartnerAvatar : string?
    + ContextType : string?
    + ContextId : int?
    + UnreadCount : int
    + IsOnline : bool
    + PartnerId : int?
}

' ==================== BACKEND - DOMAIN ENTITIES ====================

class Chat #CCFFE6 {
    + ChatId : int
    + ChatName : string?
    + ChatType : string
    + ContextType : string?
    + ContextId : int?
    + CreatedAt : DateTime?
    + LastMessageAt : DateTime?
}

class ChatParticipant #CCFFE6 {
    + ChatId : int
    + AccountId : int
    + Role : string
    + UnreadCount : int
    + LastReadAt : DateTime?
    + JoinedAt : DateTime?
    + ClearedAt : DateTime?
}

class Message #CCFFE6 {
    + MessageId : int
    + ChatId : int
    + SenderId : int?
    + Content : string
    + IsSeen : bool
    + MessageStatus : string
    + SentAt : DateTime?
    + ReceivedAt : DateTime?
}

class Account #CCFFE6 {
    + AccountId : int
    + Email : string
    + Username : string?
    + PasswordHash : string?
    + PhoneNumber : string?
    + AccountStatus : string?
    + AccountFlagCount : int?
    + AccountLastLoginAt : DateTime?
    + AuthProvider : string?
    + AvatarUrl : string?
    + RefreshToken : string?
    + RefreshTokenExpiryTime : DateTime?
    + IsVerified : bool
    + AccountCreatedAt : DateTime?
    + AccountUpdatedAt : DateTime?
}

class User #CCFFE6 {
    + UserId : int
    + FullName : string
    + Bio : string?
    + DateOfBirth : DateOnly?
}

class Manager #CCFFE6 {
    + ManagerId : int
    + Role : string?
    + DisplayName : string
    + FullName : string?
    + PhoneNumber : string?
    + AvatarUrl : string?
    + Bio : string?
}

' ==================== BACKEND - SERVICE INTERFACES ====================

interface IChatService #FFE6CC {
    //+ SearchChatsAsync(accountId: int, query: string) : Task<List<ChatListDto>>//
}

' ==================== BACKEND - REPOSITORY INTERFACES ====================

interface IChatRepository #FFE6CC {
    //+ SearchParticipantsByAccountIdAsync(accountId: int, query: string) : Task<List<ChatParticipant>>//
}

' ==================== BACKEND - SERVICE IMPLEMENTATION ====================

class ChatService #CCE5FF {
    - _repo : IChatRepository
    + SearchChatsAsync(accountId: int, query: string) : Task<List<ChatListDto>>
}

' ==================== BACKEND - REPOSITORY IMPLEMENTATION ====================

class ChatRepository #FFFFCC {
    - _context : AppDbContext
    + SearchParticipantsByAccountIdAsync(accountId: int, query: string) : Task<List<ChatParticipant>>
}

' ==================== BACKEND - DbContext ====================

class AppDbContext #E6F3FF {
    + Accounts : DbSet<Account>
    + Users : DbSet<User>
    + Managers : DbSet<Manager>
    + Chats : DbSet<Chat>
    + ChatParticipants : DbSet<ChatParticipant>
    + Messages : DbSet<Message>
}

' ==================== RELATIONSHIPS ====================

' === COMPOSITION (filled diamond) ===
Account *-- User
Account *-- Manager
Chat *-- ChatParticipant
Chat *-- Message

' === UNIDIRECTIONAL ASSOCIATION (solid arrow) ===
ChatParticipant --> Account
Message --> Account
BackendController --> IChatService
ChatService --> IChatRepository
ChatRepository --> AppDbContext

' === INTERFACE REALIZATION ===
ChatService ..|> IChatService
ChatRepository ..|> IChatRepository

' === DEPENDENCY (dashed arrows) ===
FrontendController ..> BackendController
BackendController ..> ChatListDto
ChatService ..> ChatListDto
ChatRepository ..> ChatParticipant

@enduml
